# weather-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_client  README.md  docker-compose.yml  pyproject.toml  simulated_client.py  tox.ini
app/: __main__.py  database.py  weather_model.py
