[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Numerlor", email = "numerlor@numerlor.me"},
]
dependencies = [
    "fastapi==0.85.0",
    "uvicorn==0.18.3",
    "aiomysql==0.1.1",
]
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}

[tool.pdm.dev-dependencies]
lint = ["pre-commit==2.20.0"]


[tool.pyright]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
